# holdem

./: .gitignore  README.md  benchmark.ipynb  pyproject.toml  run_benchmark.py  train.py
benchmark/: agents.py
benchmark/config/: game_random+dqn.json  game_random+newdqn.json  game_random+ql.json  game_random+rulebased.json  game_random+rulebased200+rulebased1000+dqn.json  game_random+rulebased200+rulebased1000+dqn2.json  game_random+rulebased200+rulebased500+rulebased1000.json  game_random+rulebased200+rulebased500.json  game_random+rulebased500.json  game_rulebased200+rulebased1000+dqn.json  game_rulebased200+rulebased1000+dqn2.json  game_rulebased200+rulebased1000.json  game_rulebased200+rulebased500.json
examples/limit_holdem_dqn_result/: log.txt  perf.csv
examples/limit_holdem_dqn_test/: log.txt  perf.csv
examples/random+dqn/: config.json
examples/random+rulebased200+rulebased1000+dqn/: config.json
examples/random+rulebased200+rulebased1000+dqn2/: config.json
examples/random+rulebased200+rulebased500+rulebased1000/: config.json
examples/rulebased200+rulebased1000/: config.json
examples/rulebased200+rulebased1000+dqn/: config.json
examples/rulebased200+rulebased1000+dqn2/: config.json
holdem/environment/: __init__.py  card.py  compare.py  env.py  game.py  hand.py
holdem/models/: __init__.py  agent.py  dqn.py  q_learning.py  random.py  rule_based.py
holdem/utils/: __init__.py  color.py  log.py  miscs.py  random.py
