[tool.poetry]
name = "holdem"
version = "0.1.0"
description = ""
authors = ["yanglinshu <nicolasvandarkholme@outlook.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
